2008-09-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
    (drawItem): Check shadow visibility before drawing shadow.

----------  JFREECHART 1.0.11 RELEASED ------------------------

2008-09-19  David Gilbert  <david.gilbert@object-refinery.com>

    Patch from Greg Darke, slightly modified:
    * source/org/jfree/chart/renderer/xy/XYItemRendererState.java
    (firstItemIndex): New field,
    (lastItemIndex): Likewise,
    (getFirstItemIndex): New method,
    (getLastItemIndex): New method,
    (startSeriesPass): Record first and last item indices,
    * source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
    (State.startSeriesPass): Reset series state,
    (drawItem): Removed code that is handled in State now,
    (drawPrimaryLineAsPath): Fix check for last item.

2008-09-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/StandardChartTheme.java
    (smallFont): New field,
    (crosshairPaint): New field,
    (createDarknessTheme): Initilise crosshairPaint,
    (StandardChartTheme): Initialise new fields,
    (getCrosshairPaint): New method,
    (setCrosshairPaint): Likewise,
    (applyToXYPlot): Apply crosshair paint and process annotations,
    (applyToXYAnnotation): New method,
    (equals): Check new fields,
    (writeObject): Handle crosshairPaint,
    (readObject): Likewise.
    
2008-09-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/JFreeChart.java
    (draw): Check title visibility,
    * source/org/jfree/chart/title/Title.java
    (visible): New field,
    (isVisible): New method,
    (setVisible): Likewise,
    (equals): Check visible flag.
    
2008-08-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/DateAxis.java
    (locale): New field,
    (DateAxis(String, TimeZone, Locale)): New constructor,
    (setTimeZone): Updated to use new locale field,