@@ -1,5 +1,15 @@
 2008-09-23  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 2121818 (fix by Christoph Beck):
+    * source/org/jfree/chart/plot/PiePlot.java
+    (getLabelLinkDepth): New method,
+    (drawLeftLabels): Use getLabelLinkDepth(),
+    (drawRightLabels): Likewise,
+    * source/org/jfree/chart/plot/RingPlot.java
+    (getLabelLinkDepth): New method.
+
+2008-09-23  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
     (drawItem): Check shadow visibility before drawing shadow.
 
